--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
 <body>
     <!-- start header -->
     <div class="header">
+        <div class="top">
+            <div class="container">
+                <div class="row">
+                    <p class="mail col-6 page-p fl-left">
+                        <i class="fa fa-envelope"></i>
+                        Email: isoliman2021@gmail.com
+                    </p>
+                    <p class="msg col-6 page-p fl-right"><a class="page-a" href="https://t.me/imanosman">
+                            <i class="fa fa-paper-plane"></i>
+                            Phone: t.me/iman osman</a>
+                    </p>
+                </div>
+            </div>
+        </div>
         <div class="slider">
             <div class="intro_container">
                 <div class="intro">
@@ -147,7 +161,7 @@
                 Information systems graduate
                 Interested in Web designing
             </p>
-            <a download="cv.pdf"><button class="page-button">Download Resume</button></a>
+            <a href="file/isoliman2021-cv.pdf" download><button class="page-button">Download Resume</button></a>
         </div>
     </div>
     <div id="portfolio" class="portfolio">
@@ -157,26 +171,26 @@
                 <div>
                     <a href="https://imanoia.github.io/hali_cv/"><img src="image/prev-work/doctor.png" class="i">
                     </a>
-                    <p class="page-p">
+                    <!--<p class="page-p">
                         D-site
-                    </p>
+                    </p>-->
                     <a href=""><img src="image/prev-work/cv2.png" class="i"></a>
-                    <p class="page-p">
+                    <!--<p class="page-p">
                         cv-site
-                    </p>
+                    </p>-->
                     <a href="https://imanoia.github.io/imo-shop/"><img src="image/prev-work/imo-shop.png" class="i"></a>
-                    <p class="page-p">
+                    <!--<p class="page-p">
                         my shop
-                    </p>
+                    </p>-->
                 </div>
                 <div>
                     <img src="image/prev-work/interior.png" class="i">
                     <img src="image/prev-work/decor.png" class="i">
                     <img src="image/prev-work/logo6.kra" class="i">
                 </div>
-                <p class="page-p">
+                <!--<p class="page-p">
                     Interiors
-                </p>
+                </p>-->
             </div>
         </div>
     </div>
@@ -190,7 +204,7 @@
                 <p class="page-p">
                     Email: isoliman2021@gmail.com
                     <br />
-                    <a href="https://t.me/imanosman">Phone: t.me/iman osman</a>
+                    <a class="page-a" href="https://t.me/imanosman">Phone: t.me/iman osman</a>
                 </p>
             </div>
             <div class="form fl-left">
